# jadio-rust

./: Cargo.toml  README.md
src/: main.rs
src/cli/: clicommands.json  init.rs  install.rs  list.rs  mod.rs  uninstall.rs
