[package]
name = "jadio"                     # MUST be unique on crates.io
version = "0.1.0"
edition = "2021"
authors = ["Jadio"]
description = "A modular CLI framework for installing and managing JADIO packages."
license = "MIT"
exclude = [
    "/target/*",
    "/.git/*",
    "/node_modules/*",
    "/.vscode/*",
    "*.DS_Store",
    "*.lock",
    "*.log",
    "*.tmp",
    "*.bak"
]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs_extra = "1.3"

